# SatelliteSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rebuild.sh
data_processing/: plotting_playground.py
include/: constants.hpp
include/gnc/: tools.hpp
include/simulation/: eom.hpp  eom_cw.hpp  ralston4.hpp
src/: main.cpp
